--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
 .DS_Store
-config.php
+config/config.php
 *~
 *.swo
 *.swp
 coverage
-build/coverage
-build/coverage/*
-build/logs
-build/api
-build/pdepend
-build/phpdox
-build/build
+build
 cache.properties
+z_test
+www/media
+.idea
+log
